# server/genapi/api/meals/recipe/v1alpha1/recipe.pb.gw.go
@@ -396,6 +396,33 @@ func local_request_RecipeService_AcceptRecipe_0(ctx context.Context, marshaler r
 	return msg, metadata, err
 }
 
+func request_RecipeService_ScrapeRecipe_0(ctx context.Context, marshaler runtime.Marshaler, client RecipeServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq ScrapeRecipeRequest
+		metadata runtime.ServerMetadata
+	)
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if req.Body != nil {
+		_, _ = io.Copy(io.Discard, req.Body)
+	}
+	msg, err := client.ScrapeRecipe(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_RecipeService_ScrapeRecipe_0(ctx context.Context, marshaler runtime.Marshaler, server RecipeServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq ScrapeRecipeRequest
+		metadata runtime.ServerMetadata
+	)
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := server.ScrapeRecipe(ctx, &protoReq)
+	return msg, metadata, err
+}
+
 // RegisterRecipeServiceHandlerServer registers the http handlers for service RecipeService to "mux".
 // UnaryRPC     :call RecipeServiceServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -541,6 +568,26 @@ func RegisterRecipeServiceHandlerServer(ctx context.Context, mux *runtime.ServeM
 			return
 		}
 		forward_RecipeService_AcceptRecipe_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
+	mux.Handle(http.MethodPost, pattern_RecipeService_ScrapeRecipe_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/api.meals.recipe.v1alpha1.RecipeService/ScrapeRecipe", runtime.WithHTTPPathPattern("/meals/v1alpha1/recipes:scrape"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_RecipeService_ScrapeRecipe_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_RecipeService_ScrapeRecipe_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
 
 	return nil
@@ -701,6 +748,23 @@ func RegisterRecipeServiceHandlerClient(ctx context.Context, mux *runtime.ServeM
 		}
 		forward_RecipeService_AcceptRecipe_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodPost, pattern_RecipeService_ScrapeRecipe_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/api.meals.recipe.v1alpha1.RecipeService/ScrapeRecipe", runtime.WithHTTPPathPattern("/meals/v1alpha1/recipes:scrape"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_RecipeService_ScrapeRecipe_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_RecipeService_ScrapeRecipe_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	return nil
 }
 
@@ -712,6 +776,7 @@ var (
 	pattern_RecipeService_DeleteRecipe_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 2, 5, 3}, []string{"meals", "v1alpha1", "recipes", "name"}, ""))
 	pattern_RecipeService_GetRecipe_0    = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 2, 5, 3}, []string{"meals", "v1alpha1", "recipes", "name"}, ""))
 	pattern_RecipeService_AcceptRecipe_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 2, 5, 3}, []string{"meals", "v1alpha1", "recipes", "name"}, "accept"))
+	pattern_RecipeService_ScrapeRecipe_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"meals", "v1alpha1", "recipes"}, "scrape"))
 )
 
 var (
@@ -722,4 +787,5 @@ var (
 	forward_RecipeService_DeleteRecipe_0 = runtime.ForwardResponseMessage
 	forward_RecipeService_GetRecipe_0    = runtime.ForwardResponseMessage
 	forward_RecipeService_AcceptRecipe_0 = runtime.ForwardResponseMessage
+	forward_RecipeService_ScrapeRecipe_0 = runtime.ForwardResponseMessage
 )
